# sign_language

./: pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  yuvtorgb.c  yuvtorgb.h
ios/Runner/: Info.plist
lib/: dummy_data.dart  main.dart
lib/model/: calendar_model.dart  course_model.dart
lib/screen/: 1_translate_screen.dart  bookmark_screen.dart  delete_user_screen.dart  dictionary_screen.dart  home_screen.dart  insertuser_screen.dart  login_screen.dart  main_screen.dart  passwordrecovery_screen.dart  study_calendar.dart  study_screen.dart  studycource_screen.dart  studycourse_screen.dart  translate_screen.dart  update_user_screen.dart  user_screen.dart
lib/service/: animation_api.dart  auto_login_api.dart  bookmark_api.dart  calendar_api.dart  delete_user_api.dart  dictionary_api.dart  dictionary_screen_wrapper.dart  login_api.dart  logout_api.dart  reset_password_api.dart  signup_api.dart  study_api.dart  token_storage.dart  translate_api.dart  user_update_api.dart  word_detail_api.dart
lib/widget/: alllist_widget.dart  animation_widget.dart  bottom_nav_bar.dart  camera_widget.dart  choice_widget.dart  coursedata_widget.dart  coursestepcard_widget.dart  daybar_widget.dart  genericquiz_widget.dart  genericstudy_widget.dart  indexbar.dart  menuButton.dart  menu_button.dart  neumorphism.dart  review_widget.dart  stepdata.dart  stetscard_widget.dart  textbox.dart  word_details.dart  word_tile.dart
lib/widget/new_widget/: alllist_widget.dart  coursestepcard_widget.dart  daybar_widget.dart  (+5 more)
test/: widget_test.dart
(+1 files in other folders)
